# mini-todo

./: .gitignore  CLAUDE.md  COMMIT_MSG.txt  README.md  package-lock.json  package.json
.github/workflows/: build.yml  cloud-ci.yml  cloud-release.yml
.trellis/: .template-hashes.json
.trellis/spec/frontend/: component-guidelines.md  index.md  quality-guidelines.md  state-management.md
.trellis/spec/guides/: cross-layer-thinking-guide.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-07-subtask-title-display/: task.json
.trellis/tasks/05-12-remove-ai-agent/: prd.md  task.json
.trellis/tasks/05-13-cloud-api-and-skill/: task.json
.trellis/tasks/05-14-cloud-api/: task.json
.trellis/tasks/05-14-cloud-todo-seq/: task.json
.trellis/tasks/05-14-duedatebefore-duedate/: task.json
.trellis/tasks/05-14-skill-openclaw-seq/: task.json
.trellis/tasks/archive/2026-05/05-07-auto-refresh-todolist/: task.json
.trellis/tasks/archive/2026-05/05-07-settings-redesign-font-custom/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-07-subtask-title-display/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-09-repeat-reminder/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-12-remove-ai-agent/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/archive/2026-05/05-13-cloud-api-and-skill/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/workspace/dev/: index.md  journal-1.md
cloud/: .gitignore  Cargo.toml  README.md  config.example.toml  openclaw.md
cloud/deploy/: Caddyfile.example  minitodo-cloud.service
cloud/skill/minitodo/: SKILL.md  config.example.toml  install.ps1  install.sh  minitodo.py
cloud/src/: config.rs  main.rs  time.rs  util.rs
cloud/src/api/: auth.rs  error.rs  headers.rs  health.rs  ids.rs  images.rs  integration_tests.rs  mod.rs  subtasks.rs  sync.rs  todos.rs
cloud/src/db/: mod.rs  repo.rs  schema.rs
cloud/src/sync/: images.rs  mod.rs  pull.rs  push.rs  webdav.rs
docs/images/: .gitkeep
docs/开发文档/: 01-项目概述.md  02-技术架构.md  03-功能需求.md  04-UI设计规范.md  05-数据库设计.md  06-开发进度计划.md
pc/: index.html  package-lock.json  package.json
pc/src/: App.vue  main.ts
pc/src-tauri/: Cargo.toml  tauri.conf.json
pc/src-tauri/capabilities/: default.json
pc/src-tauri/src/: lib.rs
pc/src-tauri/src/commands/: data.rs  mod.rs  settings_cmd.rs  sync_cmd.rs  todo.rs  window.rs
pc/src-tauri/src/db/: connection.rs  migrations.rs  models.rs
pc/src-tauri/src/services/: notification.rs  webdav.rs
pc/src/components/: QuadrantView.vue  SettingsPanel.vue  TitleBar.vue  TodoList.vue
pc/src/stores/: appStore.ts  todoStore.ts
pc/src/styles/: main.scss
pc/src/types/: app.ts  lunar-javascript.d.ts  todo.ts
pc/src/utils/: fileLink.ts  index.ts
pc/src/views/: CompletedView.vue  EditorView.vue  NotificationView.vue  SettingsView.vue
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent_cmd.rs  data.rs  holiday.rs  intelligence_cmd.rs  mod.rs  notification_cmd.rs  prompt_template_cmd.rs  scheduler_cmd.rs  settings_cmd.rs  sync_cmd.rs  todo.rs  window.rs  workflow_cmd.rs
src-tauri/src/db/: agent_db.rs  agent_execution_db.rs  connection.rs  migrations.rs  mod.rs  models.rs  prompt_template_db.rs  scheduler_db.rs  workflow_db.rs
src-tauri/src/services/: mod.rs  notification.rs
src-tauri/src/services/agent/: claude_code.rs  codex.rs  crypto.rs  mod.rs  runner.rs  worktree.rs
src-tauri/src/services/intelligence/: context_builder.rs  mod.rs  task_splitter.rs
src-tauri/src/services/scheduler/: concurrency.rs  cron_manager.rs  engine.rs  mod.rs  post_actions.rs  priority_queue.rs  state_machine.rs  triggers.rs  workflow.rs
src/components/: AgentLogPanel.vue  AgentSettings.vue  AgentStatusBadge.vue  CalendarView.vue  CronEditor.vue  QuadrantView.vue  SchedulerPanel.vue  SettingsPanel.vue  TaskSplitDialog.vue  TitleBar.vue  TodoEditor.vue  TodoItem.vue  TodoList.vue
src/router/: index.ts
src/stores/: agentStore.ts  appStore.ts  index.ts  schedulerStore.ts  todoStore.ts
src/styles/: main.scss
src/types/: agent.ts  app.ts  index.ts  intelligence.ts  scheduler.ts  todo.ts  workflow.ts
src/utils/: holiday.ts  logWindow.ts  lunar.ts
src/views/: AgentLogView.vue  CompletedView.vue  EditorView.vue  MainView.vue  SettingsView.vue  SubtaskEditorView.vue  WorkflowView.vue
