[package]
name = "minitodo-cloud"
version = "0.2.0"
edition = "2021"
description = "Cloud HTTP API for mini-todo, syncing via WebDAV"
license = "MIT"

[[bin]]
name = "minitodo-cloud"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }

# HTTP server
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# HTTP client (WebDAV)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Compression (gzip for sync-data.json.gz)
flate2 = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# URL encoding for WebDAV paths
urlencoding = "2"

# Random suffix for id generation
rand = "0.8"

[dev-dependencies]
# tower::ServiceExt::oneshot 用来在测试里直接打 axum Router，绕过 TCP 监听
tower = { version = "0.5", features = ["util"] }
# 读 axum/hyper Response::Body 到字节
http-body-util = "0.1"
# 临时 data_dir / images_dir，测试自清理
tempfile = "3"
