[package]
name = "mini-todo"
version = "1.5.0"
description = "A minimal todo desktop app with Windows pinning support"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mini_todo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "blocking"] }
urlencoding = "2"
flate2 = "1.1.9"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
machine-uid = "0.5"
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm"] }
winreg = "0.55"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"
